logs/django-adminfiles.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/adminfiles'...
Compiling './lib/python3.5/site-packages/adminfiles/flickr.py'...
***   File "./lib/python3.5/site-packages/adminfiles/flickr.py", line 201
    raise FlickrError, "Tag object expected"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/adminfiles/locale'...
Listing './lib/python3.5/site-packages/adminfiles/locale/de'...
Listing './lib/python3.5/site-packages/adminfiles/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/adminfiles/locale/es'...
Listing './lib/python3.5/site-packages/adminfiles/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/adminfiles/locale/pl'...
Listing './lib/python3.5/site-packages/adminfiles/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/adminfiles/locale/ru'...
Listing './lib/python3.5/site-packages/adminfiles/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/adminfiles/management'...
Listing './lib/python3.5/site-packages/adminfiles/management/commands'...
Compiling './lib/python3.5/site-packages/adminfiles/management/commands/adminfiles_browser_views.py'...
***   File "./lib/python3.5/site-packages/adminfiles/management/commands/adminfiles_browser_views.py", line 13
    print "Adminfiles browser views available:"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/adminfiles/management/commands/sync_upload_refs.py'...
***   File "./lib/python3.5/site-packages/adminfiles/management/commands/sync_upload_refs.py", line 36
    print "Syncing %s" % model.__name__
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/adminfiles/static'...
Listing './lib/python3.5/site-packages/adminfiles/static/adminfiles'...
Listing './lib/python3.5/site-packages/adminfiles/static/adminfiles/mimetypes'...
Listing './lib/python3.5/site-packages/adminfiles/templates'...
Listing './lib/python3.5/site-packages/adminfiles/templates/adminfiles'...
Listing './lib/python3.5/site-packages/adminfiles/templates/adminfiles/render'...
Listing './lib/python3.5/site-packages/adminfiles/templates/adminfiles/render/image'...
Listing './lib/python3.5/site-packages/adminfiles/templates/adminfiles/uploader'...
Listing './lib/python3.5/site-packages/adminfiles/templatetags'...
Listing './lib/python3.5/site-packages/django_adminfiles-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
